--- a/Projet/2414-DES_SP7_TestSprinkler/firmware/2414-DES_SP7_TestSprinkler.X/nbproject/Makefile-genesis.properties
+++ b/Projet/2414-DES_SP7_TestSprinkler/firmware/2414-DES_SP7_TestSprinkler.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Thu May 08 09:51:25 CEST 2025
+#Fri May 09 16:21:32 CEST 2025
 default.languagetoolchain.version=2.50
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.50\\packs\\Microchip\\PIC32MX_DFP\\1.5.259
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v2.50\\bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=a8d1477a0cbdce4f518d7c31ceeffdbe
-host.id=3e7j-oaqi-0r
-configurations-xml=98f3765a73f932c53381cc58a7338d58
+host.id=36vq-to0p-ds
+configurations-xml=31e2f78e6cd97dd111fa0a48a3f1fbcf
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5232c20b48df3223daf8c79e5b83e9a8
 user-defined-mime-resolver-xml=none
 proj.dir=C\:\\microchip\\harmony\\v2_06\\apps\\MINF\\Projet\\2414-DES_SP7_TestSprinkler\\firmware\\2414-DES_SP7_TestSprinkler.X
