trying to make some order now... need to search for last ver of everything... note for the future bro make structuer thing even with srtuct map before... will keep u safe from brain fatigue

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "TP/TP2_PwmRs232_ACL_MBR/TP2_RS232"]
 	path = TP/TP2_PwmRs232_ACL_MBR/TP2_RS232
 	url = https://github.com/Sweedy3960/TP2_RS232
+[submodule "TP/TP2_PwmRs232_ACL_MBR/TP2_RS232"]
+	path = TP/TP3_MenuGen
+	url = https://github.com/Sweedy3960/TP3_MenuGen
